--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,23 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title> Iniciar Sesión </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <ion-item>
-      <ion-label position="floating">Email</ion-label>
-      <ion-input formControlName="email" type="email"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input formControlName="password" type="password"></ion-input>
-    </ion-item>
-    <ion-button expand="block" type="submit" [disabled]="!loginForm.valid"
-      >Iniciar Sesión</ion-button
-    >
-  </form>
+  <ng-container *ngIf="isAuthenticated; else loginTemplate">
+    <div class="center-buttons">
+      <ion-button expand="block" color="primary" (click)="logout()">Cerrar Sesión</ion-button>
+      <ion-button expand="block" color="danger" (click)="deleteAccount()">Eliminar Cuenta</ion-button>
+    </div>
+  </ng-container>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ng-template #loginTemplate>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input formControlName="email" type="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input formControlName="password" type="password"></ion-input>
+      </ion-item>
+      <ion-button expand="block" type="submit" [disabled]="!loginForm.valid">Iniciar Sesión</ion-button>
+    </form>
+  </ng-template>
 </ion-content>
