--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Cerrar Sesión </ion-title>
+    <ion-title> Productos </ion-title>
   </ion-toolbar>
 </ion-header>
 
