--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,19 @@
 <ion-tabs>
-
+  <ion-router-outlet></ion-router-outlet>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="tab1" routerLink="/tabs/tab1" routerDirection="root">
+      <ion-icon name="triangle"></ion-icon>
+      <ion-label>Inicio</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    
+    <ion-tab-button tab="tab2" routerLink="/tabs/tab2" routerDirection="root">
+      <ion-icon name="ellipse"></ion-icon>
+      <ion-label>Boletas</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
-    </ion-tab-button>
+    
+    <ion-tab-button tab="tab3" routerLink="/tabs/tab3" routerDirection="root">
+      <ion-icon name="square"></ion-icon>
+      <ion-label>Productos</ion-label>
+    </ion-tab-button>    
   </ion-tab-bar>
-
 </ion-tabs>
