feat: add Product features.

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -4,10 +4,43 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-item>
+    <ion-label>Filtrar por Tipo</ion-label>
+    <ion-select [(ngModel)]="selectedType" (ionChange)="getProducts()">
+      <ion-select-option value="">Todos</ion-select-option>
+      <ion-select-option value="Poleras">Poleras</ion-select-option>
+      <ion-select-option value="Gorros">Gorros</ion-select-option>
+      <ion-select-option value="Juguetería">Juguetería</ion-select-option>
+      <ion-select-option value="Alimentación">Alimentación</ion-select-option>
+      <ion-select-option value="Libros">Libros</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Ordenar por Precio</ion-label>
+    <ion-select [(ngModel)]="sortOrder" (ionChange)="getProducts()">
+      <ion-select-option value="asc">Ascendente</ion-select-option>
+      <ion-select-option value="desc">Descendente</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-list>
+    <ion-item *ngFor="let product of products">
+      <ion-thumbnail slot="start">
+        <img [src]="product.imageUrl" alt="Product Image">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ product.name }}</h2>
+        <p>{{ product.type }}</p>
+        <p>\${{ product.price }}</p>
+        <p>Stock: {{ product.stockQuantity }}</p>
+      </ion-label>
+      <ion-button (click)="addToCart(product)">Añadir al carrito</ion-button>
+    </ion-item>
+  </ion-list>
+
+  <ion-infinite-scroll (ionInfinite)="loadData($event)" threshold="100px">
+    <ion-infinite-scroll-content loadingText="Cargando productos..."></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
