--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,26 @@
-<ion-tabs>
+<ion-tabs *ngIf="showTabs">
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="person"></ion-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon name="ellipse"></ion-icon>
+      <ion-icon name="list"></ion-icon>
       <ion-label>Boletas</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="list"></ion-icon>
       <ion-label>Productos</ion-label>
     </ion-tab-button>    
   </ion-tab-bar>
 </ion-tabs>
+
+<ion-tabs *ngIf="!showTabs">
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="tab1" href="/tabs/tab1">
+      <ion-icon name="log-in"></ion-icon>
+      <ion-label>Inicio de Sesión</ion-label>
+    </ion-tab-button>
+</ion-tab-bar>
