--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,30 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+ion-header {
+    ion-toolbar {
+        --background: #C4ECFE;
+        --color: #000;
+        font-weight: bold; 
+        padding: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        height: auto; 
+        align-items: flex-start;
+    }
+
+    ion-title {
+        font-size: 24px; 
+        text-align: left; 
+        padding-left: 10%; 
+        margin-top: 10px; 
+        line-height: 1.4; 
+    }
+}
+
+ion-content {
+    --background: #1689FE; 
+}
