--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Historial de Boletas</ion-title>
+    <ion-title>Boletas</ion-title>
   </ion-toolbar>
 </ion-header>
 
