style: add shadows.

--- a/src/global.scss
+++ b/src/global.scss
@@ -48,6 +48,7 @@ ion-header {
         justify-content: center; 
         height: auto; 
         align-items: flex-start;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
     }
 
     ion-title {
