--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,13 +1,84 @@
-.center-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
+:host {
+    .center-buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        margin-top: 40%;
+        padding: 20%;
+        
+        ion-button {
+            font-size: 18px;
+            font-weight: 500;
+            border-radius: 10px;
+            border-width: 2px; 
+            border-style: solid;
+            border-color: #000000; 
+            height: 50px;
+
+            &.ion-color-primary {
+                --background: #ffffff;
+                --background-hover: #bebebe;
+                --color: #000000;
+                --border-radius: 10px; 
+                --border-width: 2px; 
+                --border-color: #000000;
+            }
+            &.ion-color-danger {
+                --background: #dc3545;
+                --background-hover: #c82333;
+                --color: #000000;
+                --border-radius: 10px;
+                --border-width: 2px; 
+                --border-color: #000000; 
+            }
+        }
+    }
   
-ion-button {
-    margin: 10px;
-}
-
-
+    form {
+      margin-top: 30%;
+      padding: 10%;
+      ion-label {
+        font-size: 18px;
+        color: #ffffff; 
+        font-weight: 700;
+      }
+      ion-item {
+        --background: #f7f7f7;
+        --color: #333333;
+        border-radius: 8px;
+        margin-bottom: 5%;
+        ion-label {
+          font-size: 14px;
+          color: #666666; 
+        }
+        ion-input {
+          padding: 8px;
+          --color: #000000; 
+        }
+      }
+      ion-button {
+        --background: #ffffff;
+        --background-hover: #bebebe;
+        color: rgb(0, 0, 0);
+        border-radius: 50%;
+        font-size: 18px;
+        font-weight: 600;
+        height: 50px;
+        margin-top: 30%;
+        padding: 10%;
+  
+        &:disabled {
+          opacity: 0.7;
+        }
+      }
+    }
+  
+    .login-template {
+      text-align: center;
+      margin-top: 40px;
+      ion-item {
+        --color: #333333;
+      }
+    }
+  }
+  
