--- a/src/global.scss
+++ b/src/global.scss
@@ -44,10 +44,9 @@ ion-header {
         font-weight: bold; 
         padding: 5%;
         display: flex;
-        flex-direction: column;
-        justify-content: center; 
-        height: auto; 
-        align-items: flex-start;
+        flex-direction: row;
+        justify-content: space-between; 
+        align-items: center;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
     }
 
@@ -57,6 +56,12 @@ ion-header {
         padding-left: 10%; 
         margin-top: 10px; 
         line-height: 1.4; 
+    }
+
+    ion-buttons {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center; 
     }
 }
 
