--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,84 +1,98 @@
 :host {
+  @media (min-width: 1024px) {
     .center-buttons {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        margin-top: 40%;
-        padding: 20%;
-        
-        ion-button {
-            font-size: 18px;
-            font-weight: 500;
-            border-radius: 10px;
-            border-width: 2px; 
-            border-style: solid;
-            border-color: #000000; 
-            height: 50px;
-
-            &.ion-color-primary {
-                --background: #ffffff;
-                --background-hover: #bebebe;
-                --color: #000000;
-                --border-radius: 10px; 
-                --border-width: 2px; 
-                --border-color: #000000;
-            }
-            &.ion-color-danger {
-                --background: #dc3545;
-                --background-hover: #c82333;
-                --color: #000000;
-                --border-radius: 10px;
-                --border-width: 2px; 
-                --border-color: #000000; 
-            }
-        }
+      margin-top: 20%;
+      padding: 5%;
+      ion-button {
+        font-size: 20px;
+        height: 60px;
+      }
     }
-  
+
     form {
-      margin-top: 30%;
-      padding: 10%;
+      margin-top: 20%;
+      padding: 5%;
       ion-label {
-        font-size: 18px;
-        color: #ffffff; 
-        font-weight: 700;
+        font-size: 20px;
       }
       ion-item {
         --background: #f7f7f7;
         --color: #333333;
-        border-radius: 8px;
-        margin-bottom: 5%;
-        ion-label {
-          font-size: 14px;
-          color: #666666; 
-        }
-        ion-input {
-          padding: 8px;
-          --color: #000000; 
-        }
       }
       ion-button {
-        --background: #ffffff;
-        --background-hover: #bebebe;
-        color: rgb(0, 0, 0);
-        border-radius: 50%;
-        font-size: 18px;
-        font-weight: 600;
-        height: 50px;
-        margin-top: 30%;
-        padding: 10%;
-  
-        &:disabled {
-          opacity: 0.7;
-        }
-      }
-    }
-  
-    .login-template {
-      text-align: center;
-      margin-top: 40px;
-      ion-item {
-        --color: #333333;
+        font-size: 20px;
+        margin-top: 20%;
       }
     }
   }
-  
+
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .center-buttons {
+      margin-top: 30%;
+      padding: 15%;
+      ion-button {
+        font-size: 18px;
+        height: 55px;
+      }
+    }
+
+    form {
+      margin-top: 25%;
+      padding: 15%;
+      ion-label {
+        font-size: 18px;
+      }
+      ion-button {
+        font-size: 18px;
+        margin-top: 25%;
+      }
+    }
+  }
+
+  @media (max-width: 767px) {
+    .center-buttons {
+      margin-top: 40%;
+      padding: 20%;
+      ion-button {
+        font-size: 16px;
+        height: 50px;
+      }
+    }
+
+    form {
+      margin-top: 30%;
+      padding: 10%;
+      ion-label {
+        font-size: 16px;
+      }
+      ion-button {
+        font-size: 16px;
+        margin-top: 20%;
+      }
+    }
+  }
+
+  .center-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  ion-label {
+    color: #ffffff;
+  }
+
+  ion-item {
+    --background: #f7f7f7;
+    --color: #333333;
+    border-radius: 8px;
+    margin-bottom: 5%;
+  }
+}
